# to-do_app-Rust

./: .gitignore  Cargo.toml
src/: db.rs  main.rs
src/handlers/: auth.rs  mod.rs  todos.rs  user.rs
src/jwt_service/: jwt_service_struct.rs  mod.rs
src/middlewares/: auth.rs
src/models/: auth.rs  todos.rs  user.rs
src/routers/: auth.rs  todos.rs
src/utils/: jwt.rs  password.rs
